// Vitest Snapshot v1

exports[`<AddTarget /> > should render 1`] = `
<Modal
  label="Add Target"
  onExited={[Function]}
  onHide={[MockFunction spy]}
  show={true}
  size="sm"
>
  <ModalHeader>
    Add target
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <ModalBody>
      <TargetForm
        description=""
        errorName=""
        length={0}
        name=""
        onChange={[Function]}
        onClick={[Function]}
        required={false}
      />
    </ModalBody>
    <ModalFooter>
      <Button
        color="blue"
        icon="save"
        type="submit"
      >
        Submit
      </Button>
    </ModalFooter>
  </form>
</Modal>
`;

exports[`<AddTarget /> > should render error when submitted without name 1`] = `
<Modal
  label="Add Target"
  onExited={[Function]}
  onHide={[MockFunction spy]}
  show={true}
  size="sm"
>
  <ModalHeader>
    Add target
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <ModalBody>
      <TargetForm
        description=""
        errorName="Required Field"
        length={0}
        name=""
        onChange={[Function]}
        onClick={[Function]}
        required={false}
      />
    </ModalBody>
    <ModalFooter>
      <Button
        color="blue"
        icon="save"
        type="submit"
      >
        Submit
      </Button>
    </ModalFooter>
  </form>
</Modal>
`;

exports[`<AddTarget /> > should render required when form onClick() prop is called 1`] = `
<Modal
  label="Add Target"
  onExited={[Function]}
  onHide={[MockFunction spy]}
  show={true}
  size="sm"
>
  <ModalHeader>
    Add target
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <ModalBody>
      <TargetForm
        description=""
        errorName=""
        length={0}
        name=""
        onChange={[Function]}
        onClick={[Function]}
        required={true}
      />
    </ModalBody>
    <ModalFooter>
      <Button
        color="blue"
        icon="save"
        type="submit"
      >
        Submit
      </Button>
    </ModalFooter>
  </form>
</Modal>
`;
